# IceClimbers

./: README.md
Client/: CMakeLists.txt  ICE-Json.c  ICE-Json.h  Socket.c  Socket.h  main.c
ICE_Server/src/ICE_Logic/: Enemy.java  Player.java
ICE_Server/src/ICE_Server/: Server.java
IceCLimbers/: CMakeLists.txt  main.c  main.i  main.s
